--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.4.0",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.6",
+        "postcss-import": "^14.0.2",
+        "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
+        "laravel-vue-pagination": "^3.0.0",
+        "vue": "^3.2.31",
+        "vue-loader": "^17.0.0"
     }
 }
